--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 data-full-width-responsive="true"></ins>
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+            </script>
         </section>
 
         <!-- Home Videos -->
@@ -76,17 +76,18 @@
         </section>
     </main>
 
+    <!-- Footer -->
     <footer>
         <p>© Gabriel Sakala & Kingsley Mudenda, Movie Hub Pro. Content courtesy of 
             <a href="https://archive.org" target="_blank">Archive.org</a>.
         </p>
-        <p>
+        <p class="footer-links">
             <a href="about.html">About Us</a> | 
             <a href="privacy.html">Privacy Policy</a> | 
             <a href="terms.html">Terms & Conditions</a> | 
             <a href="contact.html">Contact Us</a>
         </p>
-        <p>Email: <a href="mailto:sakalagabriel21@gmail.com">sakalagabriel21@gmail.com</a></p>
+        <p>Email: <a href="mailto:moviehubproscenter@gmail.com">moviehubproscenter@gmail.com</a></p>
     </footer>
 
     <script src="script.js"></script>
