--- a/about.html
+++ b/about.html
@@ -3,14 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - MovieHubPro</title>
+  <title>About Us - Movie Hub Pro</title>
 </head>
 <body>
-  <h1>About MovieHubPro</h1>
-  <p>Welcome to MovieHubPro – your hub for discovering movies online. Our mission is to make it easier for users to explore and enjoy movies from various genres, including sports, anime, cartoons, and more.</p>
+  <h1>About Movie Hub Pro</h1>
+
+  <p>Welcome to Movie Hub Pro – your hub for discovering movies online. Our mission is to make it easier for users to explore and enjoy movies from various genres, including sports, anime, cartoons, and more.</p>
 
   <p>We are passionate about creating a clean, user-friendly experience where you can find trending and classic movies with ease.</p>
 
-  <p>MovieHubPro is built for movie lovers, by movie lovers. Thank you for being part of our journey!</p>
+  <p>Movie Hub Pro is built for movie lovers, by movie lovers. Thank you for being part of our journey!</p>
+
+  <h2>Content Disclaimer</h2>
+  <p>
+    All videos on Movie Hub Pro open on 
+    <a href="https://archive.org/" target="_blank" rel="noopener">Archive.org</a> 
+    and are intended for educational and personal use. 
+    We do not claim ownership of any content. 
+    Videos may be in the public domain or available under Creative Commons licenses. 
+    If you believe any video infringes copyright, please 
+    <a href="contact.html">contact us</a> and we will review it promptly.
+  </p>
+
 </body>
 </html>
