--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
     <main>
         <!-- Trending Section -->
+        <h2>Trending</h2>
         <section id="trending" class="horizontal-scroll">
             <!-- Trending videos inserted here via JS -->
         </section>
@@ -79,7 +80,7 @@
     <!-- Footer -->
     <footer>
         <p>© Gabriel Sakala & Kingsley Mudenda, Movie Hub Pro. Content courtesy of 
-            <a href="https://archive.org" target="_blank">Archive.org</a>.
+            <a href="https://archive.org" target="_blank" rel="noopener">Archive.org</a>.
         </p>
         <p class="footer-links">
             <a href="about.html">About Us</a> | 
@@ -88,6 +89,16 @@
             <a href="contact.html">Contact Us</a>
         </p>
         <p>Email: <a href="mailto:moviehubproscenter@gmail.com">moviehubproscenter@gmail.com</a></p>
+
+        <!-- AdSense-safe disclaimer -->
+        <p style="font-size:0.9em; text-align:center; color:#555;">
+            All videos on Movie Hub Pro open on 
+            <a href="https://archive.org/" target="_blank" rel="noopener">Archive.org</a> 
+            and are intended for educational and personal use. 
+            We do not claim ownership of any content. 
+            Videos may be in the public domain or available under Creative Commons licenses. 
+            If you believe any content infringes copyright, please <a href="contact.html">contact us</a>.
+        </p>
     </footer>
 
     <script src="script.js"></script>
