--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
     <main>
         <!-- Trending Section -->
+        <h2>Trending</h2>
         <section id="trending" class="horizontal-scroll">
             <!-- Trending videos inserted here via JS -->
         </section>
