--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- AdSense script -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3798659133542290" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="home-page"> <!-- Change class per page: home-page, about-page, privacy-page, terms-page, contact-page -->
+
     <!-- Header -->
     <header>
         <div class="logo">🎬 Movie Hub Pro</div>
